--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             background-color: #f0f8ff; /* Light blue background */
         }
         .container {
+            max-width: 600px;
+            margin: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -22,10 +24,32 @@
         }
         .heading {
             margin-bottom: 20px; /* Added space below heading */
-            font-size: 20px;
+            font-size: 24px;
             font-weight: bold;
             color: #4CAF50; /* Green color for heading */
             text-align: center; /* Center-aligned text */
+        }
+        .nav {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .nav li {
+            display: inline;
+            margin-right: 10px;
+        }
+        .nav a {
+            text-decoration: none;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+        .nav a:hover {
+            text-decoration: underline;
         }
         .label {
             margin-bottom: 5px;
@@ -54,7 +78,14 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Capital Cycle Store Invoice Calculator</h1> <label for="amount" class="label">Total Invoice Amount:</label>
+        <h1 class="heading">Capital Cycle Store Invoice Calculator</h1>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="calculating-items.html">Calculating Items</a></li>
+            </ul>
+        </nav>
+        <label for="amount" class="label">Total Invoice Amount:</label>
         <input type="number" id="amount" class="input-field">
         <button class="button" onclick="calculateGST()">Calculate GST</button>
         <div id="result" class="result"></div>
