--- a/calculating-items.html
+++ b/calculating-items.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capital Cycle Store Invoice Calculator</title>
+    <title>Capital Cycle Store - Calculating Items</title>
     <style>
         body {
             font-family: sans-serif;
@@ -51,16 +51,20 @@
         .nav a:hover {
             text-decoration: underline;
         }
-        .label {
-            margin-bottom: 5px;
-            font-weight: bold;
+        .items-table {
+            border-collapse: collapse;
+            width: 100%;
+            margin-bottom: 15px;
         }
-        .input-field {
+        .items-table th, .items-table td {
             padding: 10px;
             border: 1px solid #ccc;
-            border-radius: 4px;
-            width: 250px;
-            margin-bottom: 15px;
+            text-align: left;
+        }
+        .items-table input[type="text"], .items-table input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
         }
         .button {
             background-color: #4CAF50; /* Green color for button */
@@ -69,40 +73,90 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin: 5px;
+            transition: background-color 0.3s;
         }
-        .result {
-            margin-top: 15px;
+        .button:hover {
+            background-color: #45a049;
+        }
+        .remove-button {
+            background-color: #f44336;
+            color: white;
+            padding: 8px 12px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .remove-button:hover {
+            background-color: #e53935;
+        }
+        .total-amount {
             font-weight: bold;
+            margin-top: 15px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Capital Cycle Store Invoice Calculator</h1>
+        <h1 class="heading">Capital Cycle Store - Calculating Items</h1>
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="calculating-items.html">Calculating Items</a></li>
             </ul>
         </nav>
-        <label for="amount" class="label">Total Invoice Amount:</label>
-        <input type="number" id="amount" class="input-field">
-        <button class="button" onclick="calculateGST()">Calculate GST</button>
-        <div id="result" class="result"></div>
-    </div>
-    <script>
-        function calculateGST() {
-            const amount = parseFloat(document.getElementById('amount').value);
-            if (isNaN(amount)) {
-                alert("Please enter a valid amount.");
-                return;
+        <table class="items-table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <button class="button" onclick="addNewItemRow()">Add New Item</button>
+        <span class="total-amount">Total: ₹<span id="total-value">0.00</span></span>
+        <script>
+            // Function to add a new item row
+            function addNewItemRow() {
+                const tbody = document.querySelector('.items-table tbody');
+                const newRow = document.createElement('tr');
+                const nameCell = document.createElement('td');
+                const priceCell = document.createElement('td');
+                const actionCell = document.createElement('td');
+
+                const nameInput = document.createElement('input');
+                nameInput.type = 'text';
+                nameInput.placeholder = 'Enter item name';
+
+                const priceInput = document.createElement('input');
+                priceInput.type = 'number';
+                priceInput.placeholder = 'Enter price';
+                priceInput.addEventListener('input', calculateTotal);
+
+                const removeButton = document.createElement('button');
+                removeButton.textContent = 'Remove';
+                removeButton.classList.add('remove-button');
+                removeButton.addEventListener('click', function() {
+                    tbody.removeChild(newRow);
+                    calculateTotal();
+                });
+
+                nameCell.appendChild(nameInput);
+                priceCell.appendChild(priceInput);
+                actionCell.appendChild(removeButton);
+
+                newRow.appendChild(nameCell);
+                newRow.appendChild(priceCell);
+                newRow.appendChild(actionCell);
+
+                tbody.appendChild(newRow);
             }
-            const cgst = amount * 0.06;
-            const sgst = cgst;
-            const finalAmount = amount - (cgst + sgst);
-            const result = `CGST: ₹${cgst.toFixed(2)} <br> SGST: ₹${sgst.toFixed(2)} <br> Final Amount: ₹${finalAmount.toFixed(2)}`;
-            document.getElementById('result').innerHTML = result;
-        }
-    </script>
-</body>
-</html>
+
+            // Function to calculate total amount
+            function calculateTotal() {
+                let total = 0;
+                const priceInputs = document.querySelectorAll('.items-table tbody input[type="number"]');
