--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capital Cycle Store Invoice Calculator</title>
+    <title>Capital Cycle Store</title>
     <style>
         body {
             font-family: sans-serif;
@@ -62,6 +62,15 @@
             width: 250px;
             margin-bottom: 15px;
         }
+        /* Remove arrow from number input */
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
         .button {
             background-color: #4CAF50; /* Green color for button */
             color: white;
@@ -69,6 +78,10 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #45a049;
         }
         .result {
             margin-top: 15px;
@@ -78,15 +91,15 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Capital Cycle Store Invoice Calculator</h1>
+        <h1 class="heading">Capital Cycle Store</h1>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">GST Calculator</a></li>
                 <li><a href="calculating-items.html">Calculating Items</a></li>
             </ul>
         </nav>
         <label for="amount" class="label">Total Invoice Amount:</label>
-        <input type="number" id="amount" class="input-field">
+        <input type="number" id="amount" class="input-field" placeholder="Enter amount">
         <button class="button" onclick="calculateGST()">Calculate GST</button>
         <div id="result" class="result"></div>
     </div>
