--- a/calculating-items.html
+++ b/calculating-items.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capital Cycle Store - Calculating Items</title>
+    <title>Capital Cycle Store</title>
     <style>
         body {
             font-family: sans-serif;
@@ -99,10 +99,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Capital Cycle Store - Calculating Items</h1>
+        <h1 class="heading">Capital Cycle Store</h1>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">GST Calculator</a></li>
                 <li><a href="calculating-items.html">Calculating Items</a></li>
             </ul>
         </nav>
