--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <ul>
                 <li><a href="index.html">GST Calculator</a></li>
                 <li><a href="calculating-items.html">Calculating Items</a></li>
-                <li><a href="Stocks-profit-calculator.html">Stocks Profit Calculator</li>
+                <li><a href="Stocks-profit-calculator.html">Stocks Profit Calculator</a></li>
             </ul>
         </nav>
         <label for="amount" class="label">Total Invoice Amount:</label>
