--- a/calculating-items.html
+++ b/calculating-items.html
@@ -112,6 +112,7 @@
             <ul>
                 <li><a href="index.html">GST Calculator</a></li>
                 <li><a href="calculating-items.html">Calculating Items</a></li>
+                <li><a href="Stocks-Profit-Calculator.html">Stocks Profit Calculator</a></li>
             </ul>
         </nav>
         <table class="items-table">
