--- a/calculating-items.html
+++ b/calculating-items.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capital Cycle Store</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
       body {
         font-family: sans-serif;
         margin: 0;
         padding: 20px;
-        background-color: #f0f8ff;
+        background-color: #E6E6FA;
         /* Light blue background */
       }
 
@@ -22,12 +21,12 @@
         flex-direction: column;
         align-items: center;
         background-color: #fff;
-        border-radius: 8px;
+        border-radius: 94px;
         padding: 30px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         /* Add animation for border */
         animation: borderAnimation 4s infinite alternate;
-        border: 13px solid #0056b3;
+        border: 13px solid #4169E1;
         /* Added border */
       }
       }
@@ -35,7 +34,7 @@
       .heading {
         margin-bottom: 20px;
         /* Added space below heading */
-        font-size: 24px;
+        font-size: 26px;
         font-weight: bold;
         color: #4CAF50;
         /* Green color for heading */
@@ -65,21 +64,21 @@
       .nav a {
         display: block;
         /* Change to block for full-width buttons */
-        border: 1px solid #4CAF50;
+        border: 2px solid #4169E1;
         /* Add thin border */
         border-radius: 4px;
         padding: 10px;
         text-align: center;
         /* Center-align text */
         text-decoration: none;
-        color: #4CAF50;
+        color: black;
         font-weight: bold;
         transition: background-color 0.3s;
         /* Add transition for smooth color change */
       }
 
       .nav a:hover {
-        background-color: rgba(76, 175, 80, 0.1);
+        background-color: rgba(41, 43, 215, 0.05);
         /* Light green background on hover */
       }
       }
@@ -156,19 +155,19 @@
       }
 
       .button {
-        background-color: #4CAF50;
+        background-color: #4169E1;
         /* Green color for button */
         color: white;
         padding: 12px 20px;
         border: none;
-        border-radius: 4px;
+        border-radius: 10px;
         cursor: pointer;
         margin: 5px;
         transition: background-color 0.3s;
       }
 
       .button:hover {
-        background-color: #45a049;
+        background-color: #C1C8E4;
       }
 
       .remove-button {
@@ -193,7 +192,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="heading">Capital Cycle Store</h1>
+      <h1 class="heading" style="font-size: 26px">Capital Cycle Store</h1>
       <nav class="nav">
         <ul>
           <li>
