--- a/test.html
+++ b/test.html
@@ -5,12 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capital Cycle Store</title>
     <style>
+        /* General styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f0f8ff; /* Light blue background */
+            background-color: #E6E6FA;
         }
+
+        /* New Navbar Styles */
+        .navbar {
+            background-color: #4169E1;
+            color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .navbar-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+            height: 60px;
+        }
+
+        .brand-logo {
+            font-size: 24px;
+            font-weight: bold;
+            text-decoration: none;
+            color: white;
+        }
+
+        .nav-links {
+            list-style: none;
+            display: flex;
+        }
+
+        .nav-links li {
+            margin-left: 20px;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: white;
+            font-size: 18px;
+            transition: color 0.3s ease;
+        }
+
+        .nav-links a:hover {
+            color: #ffdd57;
+        }
+
+        .menu-toggle {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+        }
+
+        .menu-toggle .bar {
+            height: 3px;
+            width: 25px;
+            background-color: white;
+            margin: 4px 0;
+            transition: all 0.3s ease;
+        }
+
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                width: 100%;
+                background-color: #4169E1;
+                position: absolute;
+                top: 60px;
+                left: 0;
+            }
+
+            .nav-links.active {
+                display: flex;
+            }
+
+            .nav-links li {
+                margin: 10px 0;
+                text-align: center;
+            }
+
+            .menu-toggle {
+                display: flex;
+            }
+        }
+
+        /* Existing styles */
         .container {
             width: 70%;
             max-width: 600px;
@@ -19,104 +114,159 @@
             flex-direction: column;
             align-items: center;
             background-color: #fff;
-            border-radius: 8px;
+            border-radius: 94px;
             padding: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            /* Add animation for border */
+            border: 13px solid #4169E1;
             animation: borderAnimation 4s infinite alternate;
-            border: 13px solid #0056b3; /* Added border */
+            margin-top: 60px; /* Added margin-top */
         }
-        }
+
         .heading {
-            margin-bottom: 20px; /* Added space below heading */
-            font-size: 24px;
-            font-weight: bold;
-            color: #4CAF50; /* Green color for heading */
-            text-align: center; /* Center-aligned text */
-        }
-        .nav {
-            width: 100%;
-            display: flex;
-            justify-content: center;
             margin-bottom: 20px;
-        }
-        .nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .nav li {
-            display: block; /* Change to block for better stacking on small screens */
-            margin-bottom: 10px; /* Increase spacing between nav items */
-        }
-        .nav a {
-            display: block; /* Change to block for full-width buttons */
-            border: 1px solid #4CAF50; /* Add thin border */
-            border-radius: 4px;
-            padding: 10px;
-            text-align: center; /* Center-align text */
-            text-decoration: none;
-            color: #4CAF50;
+            font-size: 26px;
             font-weight: bold;
-            transition: background-color 0.3s; /* Add transition for smooth color change */
+            color: black;
+            text-align: center;
         }
-        .nav a:hover {
-            background-color: rgba(76, 175, 80, 0.1); /* Light green background on hover */
-        }
+
         .label {
             margin-bottom: 5px;
             font-weight: bold;
         }
+
         .input-field {
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            width: 250px;
+            width: 200px; /* Set width to 200px */
             margin-bottom: 15px;
+            margin-top: 15px;
         }
-        /* Remove arrow from number input */
+
         input[type="number"]::-webkit-outer-spin-button,
         input[type="number"]::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
+
         input[type="number"] {
             -moz-appearance: textfield;
         }
+
         .button {
-            background-color: #007AFF; /* Blue color for iOS button */
+            background-color: #4169E1;
             color: white;
-            padding: 15px 30px; /* Increase padding for larger touch area */
+            padding: 15px 20px;
             border: none;
-            border-radius: 10px; /* Slightly round corners */
-            font-size: 18px; /* Larger font size for better readability */
+            border-radius: 10px;
+            font-size: 18px;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin-bottom: 20px;
         }
+
         .button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background-color: #0056b8;
         }
+
         .result {
             margin-top: 15px;
             font-weight: bold;
         }
+
+        .history-container {
+            width: 50%;
+            max-width: 600px;
+            margin: auto;
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .history-heading {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .history-item {
+            font-size: 14px;
+            margin-bottom: 5px;
+        }
+
+        .history-item + .history-item {
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
+            margin-top: 10px;
+        }
+
+        .reset-button {
+            background-color: #ff4c4c;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            display: flex;
+            align-items: center;
+            margin-bottom: 7px;
+        }
+
+        .reset-button:hover {
+            background-color: #d93b3b;
+        }
+
+        .reset-button .icon {
+            margin-right: 5px;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="heading">Capital Cycle Store</h1>
-        <nav class="nav">
-            <ul>
+    <!-- New Navbar -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="#" class="brand-logo">Capital Cycle Store</a>
+            <ul class="nav-links">
                 <li><a href="index.html">GST Calculator</a></li>
                 <li><a href="calculating-items.html">Calculating Items</a></li>
                 <li><a href="Stocks-Profit-Calculator.html">Stocks Profit Calculator</a></li>
             </ul>
-        </nav>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Existing Content -->
+    <div class="container">
+        <h1 class="heading">Capital Cycle Store</h1>
         <label for="amount" class="label">Total Invoice Amount:</label>
         <input type="number" id="amount" class="input-field" placeholder="Enter amount">
         <button class="button" onclick="calculateGST()">Calculate GST</button>
         <div id="result" class="result"></div>
     </div>
+    <div class="history-container">
+        <button class="reset-button" onclick="resetHistory()">
+            <span class="icon">✖</span> Reset History
+        </button>
+        <div class="history-heading">Calculation History</div>
+        <div id="history"></div>
+    </div>
     <script>
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navLinks = document.querySelector('.nav-links');
+
+        mobileMenu.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+
         function calculateGST() {
             const amount = parseFloat(document.getElementById('amount').value);
             if (isNaN(amount)) {
@@ -126,9 +276,53 @@
             const cgst = amount * 0.06;
             const sgst = cgst;
             const finalAmount = amount - (cgst + sgst);
-            const result = `CGST: ₹${cgst.toFixed(2)} <br> SGST: ₹${sgst.toFixed(2)} <br> Final Amount: ₹${finalAmount.toFixed(2)}`;
+            const result = `CGST: ₹${cgst.toFixed(2)} 
+                <br> SGST: ₹${sgst.toFixed(2)} 
+                <br> Final Amount: ₹${finalAmount.toFixed(2)}`;
             document.getElementById('result').innerHTML = result;
+
+            // Save calculation in local storage
+            const history = JSON.parse(localStorage.getItem('history')) || [];
+            const now = new Date();
+            history.unshift({
+                date: now.toLocaleDateString(),
+                time: now.toLocaleTimeString(),
+                amount: amount.toFixed(2),
+                cgst: cgst.toFixed(2),
+                sgst: sgst.toFixed(2),
+                finalAmount: finalAmount.toFixed(2)
+            });
+            if (history.length > 15) {
+                history.pop(); // keep only the last 15 calculations
+            }
+            localStorage.setItem('history', JSON.stringify(history));
+            displayHistory();
         }
+
+        function displayHistory() {
+            const history = JSON.parse(localStorage.getItem('history')) || [];
+            const historyContainer = document.getElementById('history');
+            historyContainer.innerHTML = '';
+            history.forEach(item => {
+                const historyItem = document.createElement('div');
+                historyItem.classList.add('history-item');
+                historyItem.innerHTML = `Date: ${item.date} 
+                    <br> Time: ${item.time} 
+                    <br> Amount: ₹${item.amount} 
+                    <br> CGST: ₹${item.cgst} 
+                    <br> SGST: ₹${item.sgst} 
+                    <br> Final Amount: ₹${item.finalAmount}`;
+                historyContainer.appendChild(historyItem);
+            });
+        }
+
+        function resetHistory() {
+            localStorage.removeItem('history');
+            displayHistory();
+        }
+
+        // Display history on page load
+        displayHistory();
     </script>
 </body>
 </html>
