--- a/test.html
+++ b/test.html
@@ -103,6 +103,14 @@
             .menu-toggle {
                 display: flex;
             }
+
+            .container {
+                width: 90%;
+            }
+
+            .history-container {
+                width: 85%;
+            }
         }
 
         /* Existing styles */
